# mcp-smart-searcher

./: .gitignore  CHANGE_LOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/mcp_smart_searcher/: __init__.py  __main__.py  server.py
tests/: test_server.py
