[project]
name = "mcp-smart-searcher"
version = "0.2.2"
description = "A smart MCP server for multi-engine web search with AI-powered results"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "PXSR" }
]
keywords = ["mcp", "search", "web", "claude", "ai", "tavily"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "markdownify>=0.13.0",
    "readability-lxml>=0.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mcp-smart-searcher = "mcp_smart_searcher:main"

[project.urls]
Homepage = "https://github.com/PXSR/mcp-smart-searcher"
Repository = "https://github.com/PXSR/mcp-smart-searcher"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_smart_searcher"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
